feat: I just added all of the unit tests for my servives