@@ -65,6 +65,16 @@
 			<version>4.0.0-M1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>3.2.5</version>
+			<configuration>
+				<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+			</configuration>
+		</plugin>
+
 	</dependencies>
 
 	<build>
